Improve errors, library language, and add more liaisons and tests
A bunch more changes. Make KeyPath interoperable with KeyMapper